home/layout: fix navbar padding on mobile

--- a/home/src/app.pcss
+++ b/home/src/app.pcss
@@ -12,5 +12,5 @@ body {
 	 * At the small breakpoint, add more horizontal padding and switch to different navbar.
 	 * At the large breakpoint, cut off the width of the page.
 	 */
-	@apply mx-auto max-w-screen-lg bg-green-200 px-4 sm:px-6 sm:py-4;
+	@apply mx-auto max-w-screen-md bg-green-200 sm:px-6 sm:py-4;
 }
